changed button spacing, deleted the search navbar item, and some minor fixes

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -113,3 +113,7 @@ td {
   border-width: thick !important;
   margin: 5px !important;
 }
+
+.btn-table {
+  width: 200px !important;
+}
